fix: fix web-app horizontal overflow

--- a/web-app/src/index.css
+++ b/web-app/src/index.css
@@ -25,6 +25,7 @@ a {
   flex: 1 1 auto;
   height: 100%;
   width: 100%;
+  box-sizing: border-box;
 }
 
 .scroll-container {
